# bolsar-scrapper

./: .gitignore  README.md  bolsar-scrapper  bolsar_scrapper.py  deps.sh  install.sh  main.py  pyproject.toml
bolsar_scrapper/: bolsar_scrapper.py  utils.py
script/: bolsar-scrapper
src/bolsar_scrapper/: __init__.py  bolsar_scrapper.py  exceptions.py  utils.py
