[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bolsar_scrapper"
version = "0.0.1"
authors = [
  { name="Giuliano Taormina", email="giulitao635@gmail.com" },
]
description = "A simple program to retrieve information from bolsar website."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "selenium>=4.8.0",
]

[project.urls]
"Homepage" = "https://github.com/giuli635/bolsar-scrapper"
"Bug Tracker" = "https://github.com/giuli635/bolsar-scrapper/issues"
