[tool.poetry]
name = "bolsar_scrapper"
version = "0.1.2"
description = "A simple program to retrieve information from bolsar website."
authors = ["giuli635 <giulitao635@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bolsar_scrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
